reasoning_transformations/CRUXEval/Transformations/logs/sample_273.log
STARTING AT 2024-10-19 22:13:05.526537
[START] processing file: sample_273
*Running tests for: sample_273
 
Result: ['tests_pass']
tests_pass sample_273 /home/yang/Benchmark/dataset/cruxeval/code//sample_273.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_273
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_273", line 12
    nonlocal new_name, n
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'n' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_273", line 12\n    nonlocal new_name, n\n    ^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'n\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_273
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_273
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_273.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_273.py
*Running tests for: sample_273
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_273.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_273',
  'genetic_algorithm': None,
  'original_code': 'def f(name):\n'
                   "    new_name = ''\n"
                   '    name = name[::-1]\n'
                   '    for i in range(len(name)):\n'
                   '        n = name[i]\n'
                   "        if n != '.' and new_name.count('.') < 2:\n"
                   '            new_name = n + new_name\n'
                   '        else:\n'
                   '            break\n'
                   '    return new_name',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_273.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_273.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_273.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.854041,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([57, 67, 44], [91, 44, 99])\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc0_23(n, new_name):\n'
                      "    parse('2024-10-19 22:13:10')\n"
                      "    base64.b64encode(b'33659311872839395861')\n"
                      '    return n + new_name\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(name):\n'
                      '    shuffle([4, 54, 67])\n'
                      '    Fernet.generate_key()\n'
                      '    time.sleep(0.26)\n'
                      '    datetime.datetime.now()\n'
                      '    try:\n'
                      "        new_name = [''][0]\n"
                      '        name = name[::-1]\n'
                      '        LoopChecker14 = 905\n'
                      '        LoopChecker24 = 904\n'
                      '        ConditionChecker19 = 293\n'
                      '        ConditionChecker29 = 78\n'
                      '        for LoopIndexOut in range(LoopChecker14 // '
                      'LoopChecker24):\n'
                      '            for newi_1 in range(len(name)):\n'
                      '                n = name[newi_1]\n'
                      '                if ConditionChecker19 & '
                      'ConditionChecker29:\n'
                      "                    if n != '.' and new_name.count('.') "
                      '< 2:\n'
                      '                        new_name = newFunc0_23(n, '
                      'new_name)\n'
                      '                    else:\n'
                      '                        break\n'
                      '        else:\n'
                      '            pass\n'
                      '        return new_name\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_273. Total Time: 6.854041
END AT 2024-10-19 22:13:12.382081
